# quiz2

./: Cargo.toml  README.md  USAGE.txt  build.sh  camera-demo.sh  quiz2-accel  quiz2-soft  run-benchmarks.sh
results/: demo-accel.txt  demo-soft.txt  openssl-sha1.txt  openssl-sha256.txt  rust-accel-bench.txt  rust-soft-bench.txt
src/: main.rs
