[package]
name = "quiz2"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[features]
default = []
force-soft = ["sha1/force-soft", "sha2/force-soft"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
